[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprite/axe2.png" type="Texture" id=1]
[ext_resource path="res://third-party/test_shader_material.tres" type="Material" id=2]
[ext_resource path="res://screen/Fireball_Projectile.gd" type="Script" id=3]
[ext_resource path="res://sprite/smokepuff.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.95

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="Curve" id=6]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.977011, 99.3182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.00574712, 0.0113636 ), 0.0, 0.0, 0, 0, Vector2( 0.505747, 0.811364 ), 0.0, 0.0, 0, 0, Vector2( 0.982759, 0.0295454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.119205, 0.933775 )
colors = PoolColorArray( 0.996078, 0.415686, 0, 1, 0.996078, 0.415686, 0, 0 )

[node name="Fireball_Projectile" type="RigidBody2D"]
material = ExtResource( 2 )
position = Vector2( 77, 56 )
collision_layer = 0
collision_mask = 2
physics_material_override = SubResource( 1 )
can_sleep = false
angular_damp = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, 2 )
scale = Vector2( 0.590342, 0.590342 )
z_index = 4
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )

[node name="LifetimeTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true
autostart = true

[node name="DespawnParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 1.25
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
radial_accel = 150.0
damping = 100.0
damping_curve = SubResource( 6 )
scale_amount = 0.5
scale_amount_random = 0.5
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
